Nav-Bar Design Phase

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400&family=Comfortaa:wght@300&display=swap" rel="stylesheet">
     <title>TEKOLAJ</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <!-- Top Navigation -->
+    <nav>
+        <ul class="topnav">
+            <li><a href="#home">TEKOLAJ</a></li>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#forum">FORUM</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li class="topnav-right"><a href="#sign up">SIGN UP</a></li>
+            <li class="topnav-right"><a href="#sign in">SIGN IN</a></li>
+        </ul>
+    </nav>    
 </body>
 </html>
