--- a/index.html
+++ b/index.html
@@ -4,20 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400&family=Comfortaa:wght@300&display=swap" rel="stylesheet">
+    <!-- Tempoary text style for the logo due to no logo so as to stand out -->
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>TEKOLAJ</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!-- Top Navigation -->
     <nav>
-        <ul class="topnav">
-            <li><a href="#home">TEKOLAJ</a></li>
+        <ul class="topnav" id="dropdown">
+            <li id="logo"><a href="#home">TEKOLAJ</a></li>
             <li><a href="#home">HOME</a></li>
-            <li><a href="#forum">FORUM</a></li>
+            <li><a href="#forum">Services</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li class="topnav-right"><a href="#sign up">SIGN UP</a></li>
             <li class="topnav-right"><a href="#sign in">SIGN IN</a></li>
+            <li class="dropdownicon"><a href="javascrip:void(0);" onclick="dropDownMenue()">&#9776;</a></li>
         </ul>
-    </nav>    
+    </nav>  
+    
+    <!-- quick script for drop down action -->
+<script>
+    function dropDownMenue() {
+        let get = document.getElementById("dropdown");
+        // changing class name to .topnav.responsive
+        if (get.className === "topnav") {
+            get.className += " responsive";
+        }else {
+            get.className = "topnav";
+        }
+    }
+</script>
+
 </body>
 </html>
