--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400&family=Comfortaa:wght@300&display=swap" rel="stylesheet">
     <!-- Tempoary text style for the logo due to no logo so as to stand out -->
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <title>TEKOLAJ</title>
+    <title>TEK HUB</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!-- Top Navigation -->
     <nav>
         <ul class="topnav" id="dropdown">
-            <li id="logo"><a href="#home">TEKOLAJ</a></li>
+            <li id="logo"><a href="#home">TEK HUB</a></li>
             <li><a href="#home">HOME</a></li>
             <li><a href="#forum">Services</a></li>
             <li><a href="#about">ABOUT</a></li>
@@ -22,7 +22,114 @@
             <li class="dropdownicon"><a href="javascrip:void(0);" onclick="dropDownMenue()">&#9776;</a></li>
         </ul>
     </nav>  
-    
+
+    <!-- Body section -->
+        <!-- First Section -->
+    <section id="with-gradient">
+        <div class="row">
+            <div class="col-6 ">
+                <div class="leftside-col">
+                    <h1 class="large-h1">TEK HUB</h1>
+                    <h1 class="large-h1">Home of Developers</h1>
+                </div>
+                <form action="">
+                    <div class="leftside-col">
+                        <h2>Username</h2>
+                        <input class="inputbox" placeholder="Username" name="username" type="text">
+                        <h2>Password</h2>
+                        <input class="inputbox" placeholder="Password" name="password" type="password">
+                    </div>
+                </form>
+            </div>
+            <div class="col-6">
+                <div class="rightside-col">
+                    <iframe width="90%" height="315" 
+                    src="https://www.youtube.com/embed/AuVHftBiDVw" 
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Header -->
+
+    <header>
+        <h1 class="section2header">What we also offer</h1>
+    </header>
+
+    <!-- Second Section -->
+    <section>
+        <div class="row">
+            <div class="col-4">
+                <div class="box">
+                    <div class="icon">
+                        <img src="/images/logo.png" alt="logo">
+                    </div>
+                    <label for="">Web Development</label>
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Illum, architecto eius. 
+                        Molestiae corporis ullam necessitatibus?</p>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="box">
+                    <div class="icon">
+                        <img src="/images/logo.png" alt="Tekolaj logo">
+                    </div>
+                    <label for="">Graphics Design</label>
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Illum, architecto eius. 
+                        Molestiae corporis ullam necessitatibus?</p>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="box">
+                    <div class="icon">
+                        <img src="/images/logo.png" alt="Tekolaj logo">
+                    </div>
+                    <label for="">Programming</label>
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Illum, architecto eius. 
+                        Molestiae corporis ullam necessitatibus?</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Button -->
+
+        <div class="row">
+            <div class="col-12">
+                <button class="learnmore">Learn More</button>
+            </div>
+        </div>
+    </section>
+    <hr>
+
+    <!-- Third Section -->
+    <section>
+        <div class="row">
+            <div class="col-7">
+                <article>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Tempore ducimus pariatur repellat!Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Tempore ducimus pariatur repellat!Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Tempore ducimus pariatur repellat!Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Tempore ducimus pariatur repellat!</p>
+                </article>
+            </div>
+            <div class="col-5">
+                <div class="infoshirt">
+                    <img src="/images/futa info shirt.png" alt="" 
+                    width="60%" height="50%">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
     <!-- quick script for drop down action -->
 <script>
     function dropDownMenue() {
